// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test for pipeline services Create pipeline works 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "biomage-test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "name": "biomage-test",
      },
    },
  ],
}
`;

exports[`test for pipeline services Create pipeline works 2`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "loggingConfiguration": Object {
        "level": "OFF",
      },
      "name": "biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
      "roleArn": "arn:aws:iam::test-account-id:role/state-machine-role-test",
      "tags": Array [
        Object {
          "key": "experimentId",
          "value": "testExperimentId",
        },
        Object {
          "key": "clusterEnv",
          "value": "test",
        },
        Object {
          "key": "sandboxId",
          "value": undefined,
        },
      ],
      "type": "STANDARD",
    },
  },
]
`;

exports[`test for pipeline services Create pipeline works 3`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "input": "{\\"samples\\":[\\"single-branch-in-map-state\\"]}",
      "stateMachineArn": "test-machine",
      "traceHeader": undefined,
    },
  },
]
`;

exports[`test for pipeline services Parses processingConfig correctly 1`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "Comment": "Pipeline for clusterEnv 'test'",
      "StartAt": "DeleteCompletedPipelineWorker",
      "States": Object {
        "ConfigureEmbedding": Object {
          "Catch": Array [
            Object {
              "ErrorEquals": Array [
                "EKS.409",
              ],
              "Next": "EndOfPipeline",
              "ResultPath": "$.error-info",
            },
          ],
          "Comment": "Attempts to create a Kubernetes Job for the pipeline server. Will swallow a 409 (already exists) error.",
          "End": true,
          "Parameters": Object {
            "CertificateAuthority": "AAAAAAAAAAA",
            "ClusterName": "biomage-test",
            "Endpoint": "https://test-endpoint.me/fgh",
            "Job": Object {
              "apiVersion": "batch/v1",
              "kind": "Job",
              "metadata": Object {
                "labels": Object {
                  "experimentId": "testExperimentId",
                  "taskName": "configureEmbedding",
                  "type": "pipeline",
                },
                "name": "remoter-client-54f9fbc3f96a7220744a6e068d1dbfb604b3e773",
              },
              "spec": Object {
                "template": Object {
                  "metadata": Object {
                    "labels": Object {
                      "type": "pipeline",
                    },
                    "name": "remoter-client-testExperimentId",
                  },
                  "spec": Object {
                    "containers": Array [
                      Object {
                        "args": Array [
                          "{\\"experimentId\\":\\"testExperimentId\\",\\"taskName\\":\\"configureEmbedding\\",\\"config\\":{},\\"server\\":\\"remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local\\"}",
                        ],
                        "image": "MOCK_IMAGE_PATH",
                        "name": "remoter-client",
                      },
                    ],
                    "restartPolicy": "Never",
                  },
                },
              },
            },
            "LogOptions": Object {
              "RetrieveLogs": true,
            },
            "Namespace": "pipeline-test-namespace",
          },
          "Resource": "arn:aws:states:::eks:runJob.sync",
          "ResultPath": null,
          "Retry": Array [
            Object {
              "BackoffRate": 2,
              "ErrorEquals": Array [
                "EKS.409",
              ],
              "IntervalSeconds": 1,
              "MaxAttempts": 2,
            },
          ],
          "Type": "Task",
        },
        "DataIntegration": Object {
          "Catch": Array [
            Object {
              "ErrorEquals": Array [
                "EKS.409",
              ],
              "Next": "ConfigureEmbedding",
              "ResultPath": "$.error-info",
            },
          ],
          "Comment": "Attempts to create a Kubernetes Job for the pipeline server. Will swallow a 409 (already exists) error.",
          "Next": "ConfigureEmbedding",
          "Parameters": Object {
            "CertificateAuthority": "AAAAAAAAAAA",
            "ClusterName": "biomage-test",
            "Endpoint": "https://test-endpoint.me/fgh",
            "Job": Object {
              "apiVersion": "batch/v1",
              "kind": "Job",
              "metadata": Object {
                "labels": Object {
                  "experimentId": "testExperimentId",
                  "taskName": "dataIntegration",
                  "type": "pipeline",
                },
                "name": "remoter-client-54f9fbc3f96a7220744a6e068d1dbfb604b3e773",
              },
              "spec": Object {
                "template": Object {
                  "metadata": Object {
                    "labels": Object {
                      "type": "pipeline",
                    },
                    "name": "remoter-client-testExperimentId",
                  },
                  "spec": Object {
                    "containers": Array [
                      Object {
                        "args": Array [
                          "{\\"experimentId\\":\\"testExperimentId\\",\\"taskName\\":\\"dataIntegration\\",\\"config\\":{},\\"server\\":\\"remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local\\"}",
                        ],
                        "image": "MOCK_IMAGE_PATH",
                        "name": "remoter-client",
                      },
                    ],
                    "restartPolicy": "Never",
                  },
                },
              },
            },
            "LogOptions": Object {
              "RetrieveLogs": true,
            },
            "Namespace": "pipeline-test-namespace",
          },
          "Resource": "arn:aws:states:::eks:runJob.sync",
          "ResultPath": null,
          "Retry": Array [
            Object {
              "BackoffRate": 2,
              "ErrorEquals": Array [
                "EKS.409",
              ],
              "IntervalSeconds": 1,
              "MaxAttempts": 2,
            },
          ],
          "Type": "Task",
        },
        "DeleteCompletedPipelineWorker": Object {
          "Comment": "Deletes the previous server pipeline HelmRelease (Service+Job).",
          "Next": "LaunchNewPipelineWorker",
          "Parameters": Object {
            "CertificateAuthority": "AAAAAAAAAAA",
            "ClusterName": "biomage-test",
            "Endpoint": "https://test-endpoint.me/fgh",
            "Method": "DELETE",
            "Path": "/apis/helm.fluxcd.io/v1/namespaces/pipeline-test-namespace/helmreleases",
            "QueryParameters": Object {
              "labelSelector": Array [
                "type=pipeline",
              ],
            },
          },
          "Resource": "arn:aws:states:::eks:call",
          "ResultPath": null,
          "Type": "Task",
        },
        "EndOfPipeline": Object {
          "End": true,
          "Type": "Pass",
        },
        "Filters": Object {
          "ItemsPath": "$.samples",
          "Iterator": Object {
            "StartAt": "CellSizeDistributionFilter",
            "States": Object {
              "CellSizeDistributionFilter": Object {
                "Catch": Array [
                  Object {
                    "ErrorEquals": Array [
                      "EKS.409",
                    ],
                    "Next": "MitochondrialContentFilter",
                    "ResultPath": "$.error-info",
                  },
                ],
                "Comment": "Attempts to create a Kubernetes Job for the pipeline server. Will swallow a 409 (already exists) error.",
                "Next": "MitochondrialContentFilter",
                "Parameters": Object {
                  "CertificateAuthority": "AAAAAAAAAAA",
                  "ClusterName": "biomage-test",
                  "Endpoint": "https://test-endpoint.me/fgh",
                  "Job": Object {
                    "apiVersion": "batch/v1",
                    "kind": "Job",
                    "metadata": Object {
                      "labels": Object {
                        "experimentId": "testExperimentId",
                        "taskName": "cellSizeDistribution",
                        "type": "pipeline",
                      },
                      "name": "remoter-client-54f9fbc3f96a7220744a6e068d1dbfb604b3e773",
                    },
                    "spec": Object {
                      "template": Object {
                        "metadata": Object {
                          "labels": Object {
                            "type": "pipeline",
                          },
                          "name": "remoter-client-testExperimentId",
                        },
                        "spec": Object {
                          "containers": Array [
                            Object {
                              "args": Array [
                                "{\\"experimentId\\":\\"testExperimentId\\",\\"taskName\\":\\"cellSizeDistribution\\",\\"config\\":{},\\"server\\":\\"remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local\\"}",
                              ],
                              "image": "MOCK_IMAGE_PATH",
                              "name": "remoter-client",
                            },
                          ],
                          "restartPolicy": "Never",
                        },
                      },
                    },
                  },
                  "LogOptions": Object {
                    "RetrieveLogs": true,
                  },
                  "Namespace": "pipeline-test-namespace",
                },
                "Resource": "arn:aws:states:::eks:runJob.sync",
                "ResultPath": null,
                "Retry": Array [
                  Object {
                    "BackoffRate": 2,
                    "ErrorEquals": Array [
                      "EKS.409",
                    ],
                    "IntervalSeconds": 1,
                    "MaxAttempts": 2,
                  },
                ],
                "Type": "Task",
              },
              "ClassifierFilter": Object {
                "Catch": Array [
                  Object {
                    "ErrorEquals": Array [
                      "EKS.409",
                    ],
                    "Next": "NumGenesVsNumUmisFilter",
                    "ResultPath": "$.error-info",
                  },
                ],
                "Comment": "Attempts to create a Kubernetes Job for the pipeline server. Will swallow a 409 (already exists) error.",
                "Next": "NumGenesVsNumUmisFilter",
                "Parameters": Object {
                  "CertificateAuthority": "AAAAAAAAAAA",
                  "ClusterName": "biomage-test",
                  "Endpoint": "https://test-endpoint.me/fgh",
                  "Job": Object {
                    "apiVersion": "batch/v1",
                    "kind": "Job",
                    "metadata": Object {
                      "labels": Object {
                        "experimentId": "testExperimentId",
                        "taskName": "classifier",
                        "type": "pipeline",
                      },
                      "name": "remoter-client-54f9fbc3f96a7220744a6e068d1dbfb604b3e773",
                    },
                    "spec": Object {
                      "template": Object {
                        "metadata": Object {
                          "labels": Object {
                            "type": "pipeline",
                          },
                          "name": "remoter-client-testExperimentId",
                        },
                        "spec": Object {
                          "containers": Array [
                            Object {
                              "args": Array [
                                "{\\"experimentId\\":\\"testExperimentId\\",\\"taskName\\":\\"classifier\\",\\"config\\":{},\\"server\\":\\"remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local\\"}",
                              ],
                              "image": "MOCK_IMAGE_PATH",
                              "name": "remoter-client",
                            },
                          ],
                          "restartPolicy": "Never",
                        },
                      },
                    },
                  },
                  "LogOptions": Object {
                    "RetrieveLogs": true,
                  },
                  "Namespace": "pipeline-test-namespace",
                },
                "Resource": "arn:aws:states:::eks:runJob.sync",
                "ResultPath": null,
                "Retry": Array [
                  Object {
                    "BackoffRate": 2,
                    "ErrorEquals": Array [
                      "EKS.409",
                    ],
                    "IntervalSeconds": 1,
                    "MaxAttempts": 2,
                  },
                ],
                "Type": "Task",
              },
              "DoubletScoresFilter": Object {
                "Catch": Array [
                  Object {
                    "ErrorEquals": Array [
                      "EKS.409",
                    ],
                    "Next": "EndOfMap",
                    "ResultPath": "$.error-info",
                  },
                ],
                "Comment": "Attempts to create a Kubernetes Job for the pipeline server. Will swallow a 409 (already exists) error.",
                "End": true,
                "Parameters": Object {
                  "CertificateAuthority": "AAAAAAAAAAA",
                  "ClusterName": "biomage-test",
                  "Endpoint": "https://test-endpoint.me/fgh",
                  "Job": Object {
                    "apiVersion": "batch/v1",
                    "kind": "Job",
                    "metadata": Object {
                      "labels": Object {
                        "experimentId": "testExperimentId",
                        "taskName": "doubletScores",
                        "type": "pipeline",
                      },
                      "name": "remoter-client-54f9fbc3f96a7220744a6e068d1dbfb604b3e773",
                    },
                    "spec": Object {
                      "template": Object {
                        "metadata": Object {
                          "labels": Object {
                            "type": "pipeline",
                          },
                          "name": "remoter-client-testExperimentId",
                        },
                        "spec": Object {
                          "containers": Array [
                            Object {
                              "args": Array [
                                "{\\"experimentId\\":\\"testExperimentId\\",\\"taskName\\":\\"doubletScores\\",\\"config\\":{\\"filterSettings\\":{\\"oneSetting\\":1},\\"oneSample\\":{\\"filterSettings\\":{\\"oneSetting\\":7}},\\"otherSample\\":{\\"filterSettings\\":{\\"oneSetting\\":15}}},\\"server\\":\\"remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local\\"}",
                              ],
                              "image": "MOCK_IMAGE_PATH",
                              "name": "remoter-client",
                            },
                          ],
                          "restartPolicy": "Never",
                        },
                      },
                    },
                  },
                  "LogOptions": Object {
                    "RetrieveLogs": true,
                  },
                  "Namespace": "pipeline-test-namespace",
                },
                "Resource": "arn:aws:states:::eks:runJob.sync",
                "ResultPath": null,
                "Retry": Array [
                  Object {
                    "BackoffRate": 2,
                    "ErrorEquals": Array [
                      "EKS.409",
                    ],
                    "IntervalSeconds": 1,
                    "MaxAttempts": 2,
                  },
                ],
                "Type": "Task",
              },
              "EndOfMap": Object {
                "End": true,
                "Type": "Pass",
              },
              "MitochondrialContentFilter": Object {
                "Catch": Array [
                  Object {
                    "ErrorEquals": Array [
                      "EKS.409",
                    ],
                    "Next": "ClassifierFilter",
                    "ResultPath": "$.error-info",
                  },
                ],
                "Comment": "Attempts to create a Kubernetes Job for the pipeline server. Will swallow a 409 (already exists) error.",
                "Next": "ClassifierFilter",
                "Parameters": Object {
                  "CertificateAuthority": "AAAAAAAAAAA",
                  "ClusterName": "biomage-test",
                  "Endpoint": "https://test-endpoint.me/fgh",
                  "Job": Object {
                    "apiVersion": "batch/v1",
                    "kind": "Job",
                    "metadata": Object {
                      "labels": Object {
                        "experimentId": "testExperimentId",
                        "taskName": "mitochondrialContent",
                        "type": "pipeline",
                      },
                      "name": "remoter-client-54f9fbc3f96a7220744a6e068d1dbfb604b3e773",
                    },
                    "spec": Object {
                      "template": Object {
                        "metadata": Object {
                          "labels": Object {
                            "type": "pipeline",
                          },
                          "name": "remoter-client-testExperimentId",
                        },
                        "spec": Object {
                          "containers": Array [
                            Object {
                              "args": Array [
                                "{\\"experimentId\\":\\"testExperimentId\\",\\"taskName\\":\\"mitochondrialContent\\",\\"config\\":{},\\"server\\":\\"remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local\\"}",
                              ],
                              "image": "MOCK_IMAGE_PATH",
                              "name": "remoter-client",
                            },
                          ],
                          "restartPolicy": "Never",
                        },
                      },
                    },
                  },
                  "LogOptions": Object {
                    "RetrieveLogs": true,
                  },
                  "Namespace": "pipeline-test-namespace",
                },
                "Resource": "arn:aws:states:::eks:runJob.sync",
                "ResultPath": null,
                "Retry": Array [
                  Object {
                    "BackoffRate": 2,
                    "ErrorEquals": Array [
                      "EKS.409",
                    ],
                    "IntervalSeconds": 1,
                    "MaxAttempts": 2,
                  },
                ],
                "Type": "Task",
              },
              "NumGenesVsNumUmisFilter": Object {
                "Catch": Array [
                  Object {
                    "ErrorEquals": Array [
                      "EKS.409",
                    ],
                    "Next": "DoubletScoresFilter",
                    "ResultPath": "$.error-info",
                  },
                ],
                "Comment": "Attempts to create a Kubernetes Job for the pipeline server. Will swallow a 409 (already exists) error.",
                "Next": "DoubletScoresFilter",
                "Parameters": Object {
                  "CertificateAuthority": "AAAAAAAAAAA",
                  "ClusterName": "biomage-test",
                  "Endpoint": "https://test-endpoint.me/fgh",
                  "Job": Object {
                    "apiVersion": "batch/v1",
                    "kind": "Job",
                    "metadata": Object {
                      "labels": Object {
                        "experimentId": "testExperimentId",
                        "taskName": "numGenesVsNumUmis",
                        "type": "pipeline",
                      },
                      "name": "remoter-client-54f9fbc3f96a7220744a6e068d1dbfb604b3e773",
                    },
                    "spec": Object {
                      "template": Object {
                        "metadata": Object {
                          "labels": Object {
                            "type": "pipeline",
                          },
                          "name": "remoter-client-testExperimentId",
                        },
                        "spec": Object {
                          "containers": Array [
                            Object {
                              "args": Array [
                                "{\\"experimentId\\":\\"testExperimentId\\",\\"taskName\\":\\"numGenesVsNumUmis\\",\\"config\\":{},\\"server\\":\\"remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local\\"}",
                              ],
                              "image": "MOCK_IMAGE_PATH",
                              "name": "remoter-client",
                            },
                          ],
                          "restartPolicy": "Never",
                        },
                      },
                    },
                  },
                  "LogOptions": Object {
                    "RetrieveLogs": true,
                  },
                  "Namespace": "pipeline-test-namespace",
                },
                "Resource": "arn:aws:states:::eks:runJob.sync",
                "ResultPath": null,
                "Retry": Array [
                  Object {
                    "BackoffRate": 2,
                    "ErrorEquals": Array [
                      "EKS.409",
                    ],
                    "IntervalSeconds": 1,
                    "MaxAttempts": 2,
                  },
                ],
                "Type": "Task",
              },
            },
          },
          "Next": "DataIntegration",
          "Type": "Map",
        },
        "LaunchNewPipelineWorker": Object {
          "Catch": Array [
            Object {
              "ErrorEquals": Array [
                "EKS.409",
              ],
              "Next": "Filters",
              "ResultPath": "$.error-info",
            },
          ],
          "Comment": "Attempts to create a Kubernetes Job+Service for the pipeline server. Will swallow a 409 (already exists) error.",
          "Next": "Filters",
          "Parameters": Object {
            "CertificateAuthority": "AAAAAAAAAAA",
            "ClusterName": "biomage-test",
            "Endpoint": "https://test-endpoint.me/fgh",
            "Method": "POST",
            "Path": "/apis/helm.fluxcd.io/v1/namespaces/pipeline-test-namespace/helmreleases",
            "RequestBody": Object {
              "apiVersion": "helm.fluxcd.io/v1",
              "kind": "HelmRelease",
              "metadata": Object {
                "annotations": Object {
                  "fluxcd.io/automated": "true",
                },
                "labels": Object {
                  "type": "pipeline",
                },
                "name": "remoter-server-testExperimentId",
                "namespace": "pipeline-test-namespace",
              },
              "spec": Object {
                "chart": Object {
                  "git": "git@github.com:biomage-ltd/pipeline",
                  "path": "remoter-server/chart",
                  "ref": "ebe7a737d28df209dc63b9345943861ca744a725",
                },
                "releaseName": "remoter-server-testExperimentId",
                "values": Object {
                  "awsAccountId": "test-account-id",
                  "awsRegion": "eu-west-1",
                  "clusterEnv": "test",
                  "experimentId": "testExperimentId",
                  "image": "MOCK_IMAGE_PATH",
                  "namespace": "pipeline-test-namespace",
                },
              },
            },
          },
          "Resource": "arn:aws:states:::eks:call",
          "ResultPath": null,
          "Retry": Array [
            Object {
              "BackoffRate": 2,
              "ErrorEquals": Array [
                "EKS.409",
              ],
              "IntervalSeconds": 1,
              "MaxAttempts": 2,
            },
          ],
          "Type": "Task",
        },
      },
    },
  },
]
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "biomage-test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "name": "biomage-test",
      },
    },
  ],
}
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 2`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "loggingConfiguration": Object {
        "level": "OFF",
      },
      "name": "biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
      "roleArn": "arn:aws:iam::test-account-id:role/state-machine-role-test",
      "tags": Array [
        Object {
          "key": "experimentId",
          "value": "testExperimentId",
        },
        Object {
          "key": "clusterEnv",
          "value": "test",
        },
        Object {
          "key": "sandboxId",
          "value": undefined,
        },
      ],
      "type": "STANDARD",
    },
  },
]
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 3`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "roleArn": "arn:aws:iam::test-account-id:role/state-machine-role-test",
      "stateMachineArn": "arn:aws:states:eu-west-1:test-account-id:stateMachine:biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
    },
  },
]
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 4`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "input": "{\\"samples\\":[\\"single-branch-in-map-state\\"]}",
      "stateMachineArn": "arn:aws:states:eu-west-1:test-account-id:stateMachine:biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
      "traceHeader": undefined,
    },
  },
]
`;
